--- a/drWeb-Test/drWeb-Test.vcxproj
+++ b/drWeb-Test/drWeb-Test.vcxproj
@@ -140,13 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="drWeb-Test.cpp" />
-    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Container.h" />
     <ClInclude Include="dictionary.h" />
     <ClInclude Include="NotFoundException.h" />
-    <ClInclude Include="test.h" />
+    <ClInclude Include="Test.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
