--- a/drWeb-Test/drWeb-Test.vcxproj.filters
+++ b/drWeb-Test/drWeb-Test.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="drWeb-Test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="test.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dictionary.h">
@@ -32,7 +29,7 @@
     <ClInclude Include="NotFoundException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="test.h">
+    <ClInclude Include="Test.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
